add prepublish scripts

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {},
   "scripts": {
     "install": "node index.js",
+    "preversion": "git checkout master && git pull && npm ls",
     "publish-patch": "npm run preversion && npm version patch && git push origin master --tags && npm publish",
     "publish-minor": "npm run preversion && npm version minor && git push origin master --tags && npm publish",
     "publish-major": "npm run preversion && npm version major && git push origin master --tags && npm publish"
