--- a/templates/.jscsrc
+++ b/templates/.jscsrc
@@ -8,6 +8,7 @@
     "requireSpacesInAnonymousFunctionExpression": {
         "beforeOpeningCurlyBrace": true
     },
+    "requirePaddingNewLinesAfterBlocks": false,
     "disallowSpacesInFunction": {
         "beforeOpeningRoundBrace": true,
         "beforeopeningCurlyBrace": false
