--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tape": "^4.5.1"
   },
   "scripts": {
-    "install": "node src/index.js",
+    "install": "node bin/install && node src/index.js",
     "preversion": "git checkout master && git pull && npm ls",
     "publish-patch": "npm run preversion && npm version patch && git push origin master --tags && npm publish",
     "publish-minor": "npm run preversion && npm version minor && git push origin master --tags && npm publish",
