--- a/package.json
+++ b/package.json
@@ -13,27 +13,28 @@
   "devDependencies": {
     "eslint": "^2.11.0",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
     "gh-pages": "^0.11.0",
-    "istanbul": "^0.4.2",
     "jsdoc": "^3.4.0",
     "minami": "^1.1.1",
+    "nyc": "^6.4.4",
     "tape": "^4.5.1"
   },
   "scripts": {
     "install": "node bin/install.js && node src/index.js",
-    "preversion": "git checkout master && git pull && npm ls",
-    "publish-patch": "npm run preversion && npm version patch && git push origin master --tags && npm publish",
-    "publish-minor": "npm run preversion && npm version minor && git push origin master --tags && npm publish",
-    "publish-major": "npm run preversion && npm version major && git push origin master --tags && npm publish",
-    "test": "node test/",
+    "test": "nyc --reporter=lcov --check-coverage --functions=90 --branches=90 node test/",
     "lint": "eslint src/ test/",
     "lintfix": "eslint --fix src/ test/",
     "validate": "npm ls",
-    "docs": "mkdir -p docs && jsdoc -t ./node_modules/minami -d docs -R README.md -r src/",
+    "preversion": "git checkout master && git pull && npm ls",
+    "docs": "mkdir -p docs && jsdoc -c .jsdoc.json src/",
     "deploy-docs": "gh-pages -d docs && rm -rf docs",
     "postpublish": "npm run docs && npm run deploy-docs",
-    "postest": "istanbul check --statements 90 --functions 90 --branches 90"
+    "publish-patch": "npm run preversion && npm version patch && git push origin master --tags && npm publish",
+    "publish-minor": "npm run preversion && npm version minor && git push origin master --tags && npm publish",
+    "publish-major": "npm run preversion && npm version major && git push origin master --tags && npm publish"
   },
   "author": "cdaringe",
   "license": "ISC",
