remove-coverage-enforcement

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "install": "node bin/install.js && node src/index.js",
-    "test": "nyc --reporter=lcov --check-coverage --functions=90 --branches=90 node test/",
+    "test": "nyc --reporter=lcov --check-coverage --lines=1 --functions=1 --branches=1 node test/",
     "lint": "eslint src/ test/",
     "lintfix": "eslint --fix src/ test/",
     "validate": "npm ls",
